--- a/src/pages/global.css
+++ b/src/pages/global.css
@@ -1,7 +1,7 @@
 .pop-over-style .popover-content{
     --width:100%;
     --height:250px;
-    --background:#50555C !important;
+    --background: #C85E5E !important;
     position:absolute;
     top:4.5rem !important;
     left:0 !important;
